- WebRTC updated from r4332 to r6818
- Qt updated to 6.9.0beta3 on macOS and Windows
- OPUS updated to v1.5.2
- Fixed gender changed from female to male when migrating to 5.17 release
- Fixed sound events disabled when migrating to 5.17 release
- Fixed language not set at first start
- Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
Android Client
- The "last joined channel" checkbox and nickname's value now saves on tt files up on export and loads up on impoart, so your settings for these options will no longer be lost!
- Ability to export each server in to a .tt file separately
- Broadcast messages are now shown in the chat tab
- Added the ability to send broadcast messages
- Redesigned server list dialog to remove the old remove server button and make it to use popup menus, results in a more clear and modern dialog, and fast navigating for screenreader users
- IP Address and status message is now shown in User Properties dialog
- Ability to select/deselect user for move to other channel
- Minimum supported Android v8.1 (Oreo)
- WebRTC updated from r4332 to r6818
- OPUS updated to v1.5.2
iOS Client
- WebRTC updated from r4332 to r6818
- OPUS updated to v1.5.2
Server
-

Version 5.17, 2024/08/15
Default Qt Client
- "Connect to a Server" and "User Accounts" dialog simplified with multiple sub dialogs
- Redesigned "Sound Events" and "Shortcuts" tabs in "Preferences" dialog
- Table view instead of tree view in "Online Users", "User Accounts", "Banned Users", "Server List", "File List", "Server Properties" and "Preferences" dialogs
- Use Qt checkable flag in user rights list of "User Accounts" dialog to allow screenreader to see if an item is checked
- Fixed state of checkable items in "Preferences", "User Account", "Server properties" dialogs not announce by Voice Over on MacOS
- Fixed labels of edit fields in "Custom Video Format" dialog
- Replaced readonly edit fields by labels in "User Info" and "Server Statistics" dialogs